Ensure nav links on mobile/tablet span viewport but no more.

--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -36,9 +36,8 @@ svg.decoupled-dev-days-logo {
       display: block;
     }
   }
-  
+
   .title-details {
-    margin-bottom: 2rem;
     padding: 0.75rem;
     background-color: #fff;
     line-height: 1.25em;
